--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -9,64 +9,29 @@ body {
     no-repeat center center fixed;
   background-size: cover;
   background-position: top center;
-  color: white;
   font-family: Arial, sans-serif;
   position: relative;
   overflow-x: hidden;
 }
-/* display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
-  align-items: center;
-  min-height: 100vh;
-  margin: 0;
-  z-index: -1; */
 
-/* background: radial-gradient(
-    circle at 24.1% 68.8%,
-    rgb(50, 50, 50) 0%,
-    rgb(0, 0, 0) 99.4%
-  ); */
-/* color: white;
-  font-family: Arial, sans-serif;
-  position: relative;
-  overflow-x: hidden; */
-
-header,
-footer {
-  width: 100%;
-  text-align: center;
-  padding: 0;
+#flik {
+  display: flex;
+  flex-direction: row;
+  justify-content: end;
+  height: 20px;
+  width: 100px;
+  border-radius: 10%;
+  margin-top: 5px;
 }
 
-footer {
-  font-family: "comfortaa";
-}
-
-#movieReelTop,
-#movieReelBottom {
-  width: 100%;
-  height: 150px; /* Adjust height to desired size */
-}
-
-#movieReelTop {
-  top: 0;
-  left: 0;
-  z-index: -1;
-}
-
-/* #movieReelBottom {
-  bottom: 0;
-  left: 0;
-  z-index: -1;
-} */
-
-header h1 {
+h1 {
   margin-bottom: 10px;
+  margin-top: 900px;
   font-size: 60px;
   font-family: "comfortaa";
   margin-top: 180px;
-  /* Adjust margin to position below the top image */
+  color: white;
+  text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
 }
 
 main {
@@ -77,7 +42,6 @@ main {
   width: 100%;
   padding: 0;
   box-sizing: border-box;
-  margin-bottom: 150px; /* Adjust margin to position above the bottom image */
 }
 
 #movieForm {
@@ -85,16 +49,18 @@ main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-
-  margin-bottom: 20px; /* Adjust form position */
+  margin-bottom: 20px;
 }
 
 input {
   width: 300px;
   height: 35px;
-  margin-top: 10px;
+  margin-top: 5px;
   text-align: center;
   font-family: "comfortaa";
+  width: 250px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
 }
 
 button {
@@ -102,6 +68,8 @@ button {
   height: 30px;
   margin-top: 10px;
   font-family: "comfortaa";
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  text-align: center;
 }
 
 .movie-container {
@@ -117,11 +85,27 @@ button {
   min-height: 200px; /* Ensure some space is available initially */
 }
 
+#initialCard {
+  background-color: whitesmoke;
+  font-family: "comfortaa";
+  color: black;
+  text-align: center;
+  margin-top: 0px;
+}
+
 .card {
   width: 300px;
   height: 400px;
   perspective: 1000px;
   margin: 30px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  overflow: hidden;
+  box-shadow: 0px 0px 10px 4px rgba(232, 247, 239, 0.59);
 }
 
 .card-inner {
@@ -150,6 +134,7 @@ button {
 
 .card-front {
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
 }
@@ -192,6 +177,11 @@ h4 {
   font-size: 15px;
   padding: 0;
   margin: 0;
+}
+
+footer {
+  font-family: "comfortaa";
+  color: white;
 }
 
 @media (max-width: 600px) {
