--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -4,7 +4,7 @@ body {
   justify-content: flex-start;
   align-items: center;
   min-height: 100vh;
-  margin: 0;
+  margin-bottom: 50px;
   background: url("/Users/meganmarson/Downloads/wp2878069-powerpoint-background-movie-theme.jpg")
     no-repeat center center fixed;
   background-size: cover;
@@ -18,8 +18,8 @@ body {
   display: flex;
   flex-direction: row;
   justify-content: end;
-  height: 20px;
-  width: 100px;
+  height: 50px;
+  width: 150px;
   border-radius: 10%;
   margin-top: 5px;
 }
@@ -67,6 +67,7 @@ button {
   width: 100px;
   height: 30px;
   margin-top: 10px;
+  margin-bottom: 30px;
   font-family: "comfortaa";
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
   text-align: center;
@@ -182,6 +183,7 @@ h4 {
 footer {
   font-family: "comfortaa";
   color: white;
+  margin-top: 50px;
 }
 
 @media (max-width: 600px) {
